# wikimedia-yaml-search

./: .gitignore  LICENSE  README.md  animals.yaml  pyproject.toml
.github/workflows/: build-and-release.yml
src/wikimedia_yaml_search/: cli.py  commons_api.py  downloader.py
